build-logs/build-cuda-0.11.0.1.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - cuda-0.11.0.1 (lib:cuda, exe:nvidia-device-query) (first run)
[1 of 2] Compiling Main             ( /tmp/workdir-cuda/cuda-0.11.0.1/dist-newstyle/build/x86_64-linux/ghc-9.6.6/cuda-0.11.0.1/setup/setup.hs, /tmp/workdir-cuda/cuda-0.11.0.1/dist-newstyle/build/x86_64-linux/ghc-9.6.6/cuda-0.11.0.1/setup/Main.o )
[2 of 2] Linking /tmp/workdir-cuda/cuda-0.11.0.1/dist-newstyle/build/x86_64-linux/ghc-9.6.6/cuda-0.11.0.1/setup/setup
Configuring cuda-0.11.0.1...
Found CUDA toolkit at: /usr (set CUDA_PATH to override this)
Storing parameters to cuda.buildinfo.generated
Using build information from 'cuda.buildinfo.generated'.
Provide a 'cuda.buildinfo' file to override this behaviour.
Using build information from 'cuda.buildinfo.generated'.
Provide a 'cuda.buildinfo' file to override this behaviour.
Preprocessing library for cuda-0.11.0.1..
Building library for cuda-0.11.0.1..
[ 1 of 44] Compiling Foreign.C.Extra
[ 2 of 44] Compiling Foreign.CUDA.Driver.Graph.Base
[ 3 of 44] Compiling Foreign.CUDA.Internal.C2HS

src/Foreign/CUDA/Internal/C2HS.hs:204:3: warning: [GHC-95396] [-Winline-rule-shadowing]
    Rule "fromIntegral/Int->CInt" may never fire
      because ‘fromIntegral’ might inline first
    Suggested fix:
      Add an INLINE[n] or NOINLINE[n] pragma for ‘fromIntegral’
    |
204 |   "fromIntegral/Int->CInt"     fromIntegral = \(I# i#) -> CInt (I32# (intToInt32# i#)) ;
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

src/Foreign/CUDA/Internal/C2HS.hs:205:3: warning: [GHC-95396] [-Winline-rule-shadowing]
    Rule "fromIntegral/Int->CLLong" may never fire
      because ‘fromIntegral’ might inline first
    Suggested fix:
      Add an INLINE[n] or NOINLINE[n] pragma for ‘fromIntegral’
    |
205 |   "fromIntegral/Int->CLLong"   fromIntegral = \(I# i#) -> CLLong (I64# (intToInt64# i#)) ;
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

src/Foreign/CUDA/Internal/C2HS.hs:208:3: warning: [GHC-95396] [-Winline-rule-shadowing]
    Rule "fromIntegral/Int->CUInt" may never fire
      because ‘fromIntegral’ might inline first
    Suggested fix:
      Add an INLINE[n] or NOINLINE[n] pragma for ‘fromIntegral’
    |
208 |   "fromIntegral/Int->CUInt"    fromIntegral = \(I# i#) -> CUInt (W32# (wordToWord32# (int2Word# i#))) ;
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

src/Foreign/CUDA/Internal/C2HS.hs:209:3: warning: [GHC-95396] [-Winline-rule-shadowing]
    Rule "fromIntegral/Int->CULLong" may never fire
      because ‘fromIntegral’ might inline first
    Suggested fix:
      Add an INLINE[n] or NOINLINE[n] pragma for ‘fromIntegral’
    |
209 |   "fromIntegral/Int->CULLong"  fromIntegral = \(I# i#) -> CULLong (W64# (wordToWord64# (int2Word# i#))) ;
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[ 4 of 44] Compiling Foreign.CUDA.Path
[ 5 of 44] Compiling Foreign.CUDA.Ptr
[ 6 of 44] Compiling Text.Show.Describe
[ 7 of 44] Compiling Foreign.CUDA.Runtime.Error
[ 8 of 44] Compiling Foreign.CUDA.Runtime.Utils
[ 9 of 44] Compiling Foreign.CUDA.Runtime.Texture
[10 of 44] Compiling Foreign.CUDA.Driver.Error
[11 of 44] Compiling Foreign.CUDA.Driver.Utils
[12 of 44] Compiling Foreign.CUDA.Driver.Profiler
[13 of 44] Compiling Foreign.CUDA.Analysis.Device
[14 of 44] Compiling Foreign.CUDA.Runtime.Device
[15 of 44] Compiling Foreign.CUDA.Driver.Module.Base
[16 of 44] Compiling Foreign.CUDA.Driver.Module.Link
[17 of 44] Compiling Foreign.CUDA.Driver.Device
[18 of 44] Compiling Foreign.CUDA.Driver.Context.Base
[19 of 44] Compiling Foreign.CUDA.Driver.Stream
[20 of 44] Compiling Foreign.CUDA.Runtime.Stream
[21 of 44] Compiling Foreign.CUDA.Runtime.Marshal
[22 of 44] Compiling Foreign.CUDA.Runtime.Exec
[23 of 44] Compiling Foreign.CUDA.Runtime
[24 of 44] Compiling Foreign.CUDA
[25 of 44] Compiling Foreign.CUDA.Driver.Graph.Capture
[26 of 44] Compiling Foreign.CUDA.Driver.Event
[27 of 44] Compiling Foreign.CUDA.Runtime.Event
[28 of 44] Compiling Foreign.CUDA.Driver.IPC.Event
[29 of 44] Compiling Foreign.CUDA.Driver.Marshal
[30 of 44] Compiling Foreign.CUDA.Driver.Texture
[31 of 44] Compiling Foreign.CUDA.Driver.IPC.Marshal
[32 of 44] Compiling Foreign.CUDA.Driver.Context.Primary
[33 of 44] Compiling Foreign.CUDA.Driver.Context.Peer
[34 of 44] Compiling Foreign.CUDA.Driver.Context.Config
[35 of 44] Compiling Foreign.CUDA.Driver.Context
[36 of 44] Compiling Foreign.CUDA.Driver.Unified
[37 of 44] Compiling Foreign.CUDA.Driver.Exec
[38 of 44] Compiling Foreign.CUDA.Driver.Module.Query
[39 of 44] Compiling Foreign.CUDA.Driver.Module
[40 of 44] Compiling Foreign.CUDA.Driver.Graph.Exec
[41 of 44] Compiling Foreign.CUDA.Driver.Graph.Build
[42 of 44] Compiling Foreign.CUDA.Driver
[43 of 44] Compiling Foreign.CUDA.Analysis.Occupancy
[44 of 44] Compiling Foreign.CUDA.Analysis
cbits/stubs.c: In function ‘cuTexRefSetAddress2D_simple’:

cbits/stubs.c:33:5: error:
     warning: ‘cuTexRefSetAddress2D_v3’ is deprecated [-Wdeprecated-declarations]
       33 |     return cuTexRefSetAddress2D(tex, &desc, dptr, pitch);
          |     ^~~~~~
   |
33 |     return cuTexRefSetAddress2D(tex, &desc, dptr, pitch);
   |     ^
In file included from ./cbits/stubs.h:14,

                 from cbits/stubs.c:5:0: error: 

/usr/include/cuda.h:16981:36: error:  note: declared here
      |
16981 | __CUDA_DEPRECATED CUresult CUDAAPI cuTexRefSetAddress2D(CUtexref hTexRef, const CUDA_ARRAY_DESCRIPTOR *desc, CUdeviceptr dptr, size_t Pitch);
      |                                    ^
16981 | __CUDA_DEPRECATED CUresult CUDAAPI cuTexRefSetAddress2D(CUtexref hTexRef, const CUDA_ARRAY_DESCRIPTOR *desc, CUdeviceptr dptr, size_t Pitch);
      |                                    ^~~~~~~~~~~~~~~~~~~~
cbits/stubs.c: In function ‘cuTexRefSetAddress’:

cbits/stubs.c:290:5: error:
     warning: ‘cuTexRefSetAddress_v2’ is deprecated [-Wdeprecated-declarations]
      290 |     return cuTexRefSetAddress_v2(ByteOffset, hTexRef, dptr, bytes);
          |     ^~~~~~
    |
290 |     return cuTexRefSetAddress_v2(ByteOffset, hTexRef, dptr, bytes);
    |     ^
In file included from ./cbits/stubs.h:14,

                 from cbits/stubs.c:5:0: error: 

/usr/include/cuda.h:16926:36: error:  note: declared here
      |
16926 | __CUDA_DEPRECATED CUresult CUDAAPI cuTexRefSetAddress(size_t *ByteOffset, CUtexref hTexRef, CUdeviceptr dptr, size_t bytes);
      |                                    ^
16926 | __CUDA_DEPRECATED CUresult CUDAAPI cuTexRefSetAddress(size_t *ByteOffset, CUtexref hTexRef, CUdeviceptr dptr, size_t bytes);
      |                                    ^~~~~~~~~~~~~~~~~~
cbits/stubs.c: In function ‘cuTexRefSetAddress2D_simple’:

cbits/stubs.c:33:5: error:
     warning: ‘cuTexRefSetAddress2D_v3’ is deprecated [-Wdeprecated-declarations]
       33 |     return cuTexRefSetAddress2D(tex, &desc, dptr, pitch);
          |     ^~~~~~
   |
33 |     return cuTexRefSetAddress2D(tex, &desc, dptr, pitch);
   |     ^
In file included from ./cbits/stubs.h:14,

                 from cbits/stubs.c:5:0: error: 

/usr/include/cuda.h:16981:36: error:  note: declared here
      |
16981 | __CUDA_DEPRECATED CUresult CUDAAPI cuTexRefSetAddress2D(CUtexref hTexRef, const CUDA_ARRAY_DESCRIPTOR *desc, CUdeviceptr dptr, size_t Pitch);
      |                                    ^
16981 | __CUDA_DEPRECATED CUresult CUDAAPI cuTexRefSetAddress2D(CUtexref hTexRef, const CUDA_ARRAY_DESCRIPTOR *desc, CUdeviceptr dptr, size_t Pitch);
      |                                    ^~~~~~~~~~~~~~~~~~~~
cbits/stubs.c: In function ‘cuTexRefSetAddress’:

cbits/stubs.c:290:5: error:
     warning: ‘cuTexRefSetAddress_v2’ is deprecated [-Wdeprecated-declarations]
      290 |     return cuTexRefSetAddress_v2(ByteOffset, hTexRef, dptr, bytes);
          |     ^~~~~~
    |
290 |     return cuTexRefSetAddress_v2(ByteOffset, hTexRef, dptr, bytes);
    |     ^
In file included from ./cbits/stubs.h:14,

                 from cbits/stubs.c:5:0: error: 

/usr/include/cuda.h:16926:36: error:  note: declared here
      |
16926 | __CUDA_DEPRECATED CUresult CUDAAPI cuTexRefSetAddress(size_t *ByteOffset, CUtexref hTexRef, CUdeviceptr dptr, size_t bytes);
      |                                    ^
16926 | __CUDA_DEPRECATED CUresult CUDAAPI cuTexRefSetAddress(size_t *ByteOffset, CUtexref hTexRef, CUdeviceptr dptr, size_t bytes);
      |                                    ^~~~~~~~~~~~~~~~~~
Preprocessing executable 'nvidia-device-query' for cuda-0.11.0.1..
Building executable 'nvidia-device-query' for cuda-0.11.0.1..
[1 of 1] Compiling Main
[2 of 2] Linking /tmp/workdir-cuda/cuda-0.11.0.1/dist-newstyle/build/x86_64-linux/ghc-9.6.6/cuda-0.11.0.1/build/nvidia-device-query/nvidia-device-query
Using build information from 'cuda.buildinfo.generated'.
Provide a 'cuda.buildinfo' file to override this behaviour.
